[gd_scene load_steps=11 format=3 uid="uid://bd62qfjn380wf"]

[ext_resource type="PackedScene" uid="uid://ctfgfelg0sho8" path="res://src/Tools/BaseTool.tscn" id="1"]
[ext_resource type="Script" uid="uid://coj8ex4hmag1m" path="res://src/Tools/BaseSelectionTool.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://d267xalp3p7ru" path="res://assets/graphics/misc/check_plain.png" id="3_mtv71"]
[ext_resource type="PackedScene" uid="uid://bbnqcxa20a5a5" path="res://src/UI/Nodes/Sliders/ValueSliderV2.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://bnc78807k1xjv" path="res://assets/graphics/misc/close.png" id="4_ad04n"]
[ext_resource type="Script" uid="uid://tfdhqto6j5j0" path="res://src/UI/Nodes/Sliders/ValueSlider.gd" id="6_2bdjf"]

[sub_resource type="InputEventAction" id="InputEventAction_gfv4x"]
action = &"transformation_confirm"

[sub_resource type="Shortcut" id="Shortcut_5gq73"]
events = [SubResource("InputEventAction_gfv4x")]

[sub_resource type="InputEventAction" id="InputEventAction_nadbx"]
action = &"transformation_cancel"

[sub_resource type="Shortcut" id="Shortcut_04tjd"]
events = [SubResource("InputEventAction_nadbx")]

[node name="ToolOptions" instance=ExtResource("1")]
script = ExtResource("2")

[node name="ConfirmButtons" type="HBoxContainer" parent="." index="2" groups=["ShowOnActiveTransformation"]]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="ConfirmButtons" index="0"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_5gq73")

[node name="TextureRect" type="TextureRect" parent="ConfirmButtons/ConfirmButton" index="0" groups=["UIButtons"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mtv71")
stretch_mode = 3

[node name="CancelButton" type="Button" parent="ConfirmButtons" index="1"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_04tjd")

[node name="TextureRect" type="TextureRect" parent="ConfirmButtons/CancelButton" index="0" groups=["UIButtons"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_ad04n")
stretch_mode = 3

[node name="ModeLabel" type="Label" parent="." index="3"]
layout_mode = 2
text = "Mode:"

[node name="Modes" type="OptionButton" parent="." index="4"]
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="Algorithm" type="OptionButton" parent="." index="5"]
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="PositionLabel" type="Label" parent="." index="6"]
layout_mode = 2
text = "Position:"

[node name="Position" parent="." index="7" instance=ExtResource("4")]
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="SizeLabel" type="Label" parent="." index="8"]
layout_mode = 2
text = "Size:"

[node name="Size" parent="." index="9" instance=ExtResource("4")]
layout_mode = 2
value = Vector2(1, 1)
min_value = Vector2(1, 1)
allow_greater = true
show_ratio = true
prefix_x = "Width:"
prefix_y = "Height:"

[node name="RotationLabel" type="Label" parent="." index="10" groups=["ShowOnActiveTransformation"]]
layout_mode = 2
text = "Rotation:"

[node name="Rotation" type="TextureProgressBar" parent="." index="11" groups=["ShowOnActiveTransformation"]]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
focus_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"ValueSlider"
min_value = -180.0
max_value = 180.0
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
script = ExtResource("6_2bdjf")
suffix = "°"
metadata/_custom_type_script = "uid://tfdhqto6j5j0"

[node name="Shear" type="TextureProgressBar" parent="." index="12" groups=["ShowOnActiveTransformation"]]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
focus_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"ValueSlider"
min_value = -90.0
max_value = 90.0
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
script = ExtResource("6_2bdjf")
suffix = "°"
metadata/_custom_type_script = "uid://tfdhqto6j5j0"

[connection signal="pressed" from="ConfirmButtons/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="ConfirmButtons/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="item_selected" from="Modes" to="." method="_on_modes_item_selected"]
[connection signal="item_selected" from="Algorithm" to="." method="_on_algorithm_item_selected"]
[connection signal="value_changed" from="Position" to="." method="_on_position_value_changed"]
[connection signal="value_changed" from="Size" to="." method="_on_size_value_changed"]
[connection signal="value_changed" from="Rotation" to="." method="_on_rotation_value_changed"]
[connection signal="value_changed" from="Shear" to="." method="_on_shear_value_changed"]
